--- a/src/App.css
+++ b/src/App.css
@@ -288,7 +288,7 @@ h4 {
   color: #E1EDD9;
   max-width: 70%;
   font-size: 1.375em;
-  line-height: 1.em;
+  line-height: 1em;
   padding: 12px;
   letter-spacing: .07em;
 }
