--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
@@ -75,6 +77,21 @@ nav ul li {
 
 }
 
+
+/* Carousel */
+
+.carousel {
+  overflow: hidden;
+}
+
+.inner {
+  transform:  0.3s;
+}
+
+
+
+/* main */
+
 #main-menu {
   position:absolute;
   right: 10%;
@@ -114,6 +131,8 @@ nav ul li {
 ul {
   list-style-type: none;
 }
+
+
 
 #header a {
   color: #2F3E46;
