--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ html, body {
 #logoAJB {
   padding-top: 4.1em;
   margin: 0;
-  animation: spin 1s linear forwards;
+  animation: spin 2s cubic-bezier(0.11, 0.86, 0.41, 1.15) forwards;
   transform-origin: center;
 }
 
@@ -57,9 +57,10 @@ html, body {
     transform: rotateY(0deg);
   }
   100% {
-    transform: rotateY(360deg);
+    transform: rotateY(720deg);
   }
 }
+
 .nav-link {
   padding: 1em;
 }
